# dataset-tool

./: .gitignore  MIGRATION.md  README.md  main.py  pyproject.toml
.github/instructions/: dataset-tool.instructions.md
.github/workflows/: ci.yml
Docs/: 1_Overview.md  2_Architecture.md  3_Usage.md
src/: __init__.py
src/align/: __init__.py  csv_generator.py  reassembler.py  verifier.py
src/converters/: __init__.py  calibration_converter.py  format_converter.py  radar_processor.py  raw_to_source.py
src/utils/: __init__.py  data_loader.py  parsers.py  s3_helper.py  validators.py
